# bank_service_transfer

./: .env-example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  test.db  tests.py
core/: config.py  database.py
db/: database.py
endpoints/: crud.py  endpoints.py  queries.py  templates.py
migrations/: env.py
migrations/versions/: 2479f75773ba_update_template_for_payment_model.py  793588eb6317_fix_type_name_field_in_transfertype.py  b23aa962ccd8_data_base_creation.py  e163f21990c6_update_tables.py
models/: models.py
schemas/: schemas.py
services/: crud.py  currency.py  queries.py
tests/: conftest.py  test_endpoints.py  test_payment_type.py  tests.py
tests/factories/: factories.py  utils.py
