[tool.poetry]
name = "money-transfer"
version = "0.1.0"
description = ""
authors = ["Egor Boev <egorcoders@gmail.com>"]
readme = "README.md"
packages = [{include = "money_transfer"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
