[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.poetry]
name = "money-transfer"
version = "0.1.0"
description = ""
authors = ["Egor Boev <egorcoders@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
python-dotenv = "^1.0.0"
alembic = "^1.10.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
httpx = "^0.23.3"
pydantic = "^1.10.7"
asyncpg = "^0.27.0"
pytest-asyncio = "^0.21.0"
async-factory-boy = "^1.0.0"
currencyconverter = "^0.17.6"
black = "^23.3.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
